Fix z-index

--- a/CRM/wwwroot/css/Index.css
+++ b/CRM/wwwroot/css/Index.css
@@ -18,7 +18,7 @@
 .tasks-spikes::before {
     content: '';
     position: absolute;
-    z-index: 3;
+    z-index: 1;
     pointer-events: none;
     background-repeat: no-repeat;
     bottom: -0.1vw;
