--- a/CRM/wwwroot/css/Layout.css
+++ b/CRM/wwwroot/css/Layout.css
@@ -1,6 +1,6 @@
 ﻿.navbar {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 80px;
     display: flex;
